--- a/src/components/button/styles.module.css
+++ b/src/components/button/styles.module.css
@@ -1,24 +1,31 @@
 @import "../../css/colors.css";
 @import "../../css/typography.css";
 
-.button {
+.buttonLg, .buttonMd {
   padding: 10px;
   font-family: var(--font-serif);
-  font-size: 12pt;
   display: inline-block;
   border-radius: 8px;
   border: 2px solid var(--color-good-luck);
   color: var(--color-good-luck);
 }
 
-.button:hover {
+.buttonLg:hover, .buttonMd:hover {
   background-color: var(--color-101-faded); 
   border-color: var(--color-101-faded); 
   opacity: 0.8; 
 }
 
-.button:active {
+.buttonLg:active, .buttonMd:active {
   background-color: var(--color-101); 
   border-color: var(--color-101); 
   opacity: 0.6; 
+}
+
+.buttonMd {
+  font-size: 12pt;
+}
+
+.buttonLg {
+  font-size: 16pt;
 }
