--- a/src/components/profile/styles.module.css
+++ b/src/components/profile/styles.module.css
@@ -5,7 +5,7 @@
   margin-bottom: 60px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 }
 
 .profile-picture {
