--- a/src/pages/about/styles.module.css
+++ b/src/pages/about/styles.module.css
@@ -1,7 +1,71 @@
+@import "../../css/colors.css";
+@import "../../css/typography.css";
+
 .header {
   padding-bottom: 40px;
 }
 
 .section {
   padding-bottom: 60px;
+}
+
+.subscription-header {
+  font-family: var(--font-serif);
+  font-size: 32px;
+  padding-bottom: 20px;
+}
+
+.subscription-prompt {
+  font-family: var(--font-sans-serif);
+  font-size: 24px;
+}
+
+.email-input {
+  height: 55px;
+  padding-left: 10px;
+  font-family: var(--font-sans-serif);
+  border-color: var(--color-good-luck-faded-2);
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: inline-block;
+  position: relative;
+  top: 2px;
+}
+
+@media (max-width: 576px) {
+  .email-input {
+    width: 100%;
+    border-radius: 8px;
+  }
+  .email-submit {
+    width: 100%;
+    border-radius: 8px;
+  }
+}
+@media (min-width: 576px) {
+  .email-input {
+    width: 80%;
+    border-radius: 8px 0px 0px 8px;
+    }
+  .email-submit {
+    border-radius: 0px 8px 8px 0px;
+    width: 20%;
+  }
+}
+
+.email-submit {
+  margin: auto;
+  height: 55px;
+  background-color: var(--color-good-luck);
+  display: inline-block;
+  padding: 10px;
+  font-family: var(--font-serif);
+  display: inline-block;
+  border: 2px solid var(--color-good-luck);
+  color: var(--color-memories);
+}
+
+.email-submit:hover {
+  background-color: var(--color-good-luck-faded-2);
 }
