--- a/src/pages/about/styles.module.css
+++ b/src/pages/about/styles.module.css
@@ -15,43 +15,26 @@
   padding-bottom: 20px;
 }
 
-.subscription-prompt {
-  font-family: var(--font-sans-serif);
-  font-size: 24px;
-}
-
 .email-input {
   height: 55px;
   padding-left: 10px;
+  font-size: 14pt;
   font-family: var(--font-sans-serif);
   border-color: var(--color-good-luck-faded-2);
-  font-size: 24px;
   margin-top: 20px;
   margin-bottom: 20px;
   display: inline-block;
   position: relative;
-  top: 2px;
+  top: 1px;
 }
 
 @media (max-width: 576px) {
-  .email-input {
-    width: 100%;
-    border-radius: 8px;
-  }
-  .email-submit {
-    width: 100%;
-    border-radius: 8px;
-  }
+  .email-input { width: 100%; border-radius: 8px; }
+  .email-submit { width: 100%; border-radius: 8px; }
 }
 @media (min-width: 576px) {
-  .email-input {
-    width: 80%;
-    border-radius: 8px 0px 0px 8px;
-    }
-  .email-submit {
-    border-radius: 0px 8px 8px 0px;
-    width: 20%;
-  }
+  .email-input { width: 80%; border-radius: 8px 0px 0px 8px; }
+  .email-submit { width: 20%; border-radius: 0px 8px 8px 0px;  }
 }
 
 .email-submit {
@@ -68,4 +51,5 @@
 
 .email-submit:hover {
   background-color: var(--color-good-luck-faded-2);
+  border: 2px solid var(--color-good-luck-faded-2);
 }
